# clawhealth

./: .gitignore  CHANGELOG.md  CLI_HELP_SPEC.md  DESIGN.md  ENV.example  LICENSE  PLAN_CN.md  PRIVACY.md  README.md  README_zh.md  RELEASE_TEMPLATE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
skills/clawhealth/: ENV.example  PUBLISH.md  README.md  README_zh.md  SKILL.md  SKILL_zh.md  bootstrap_deps.py  on_load.py  run_clawhealth.py  validate_skill.py
skills/clawhealth-garmin/: .clawhubignore  PUBLISH.md  README.md  README_zh.md  SKILL.md  SKILL_zh.md  bootstrap_deps.py  run_clawhealth.py  sync_vendor.py  test_minimal.py
src/clawhealth/: __init__.py  cli.py  commands.py  driver_garmin.py  uhm.py  utils.py
src/clawhealth.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
