[build-system]
requires = ["setuptools>=64", "wheel", "python-garminconnect>=0.1.53", "garth>=0.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawhealth"
version = "0.0.1"
description = "Health data bridge for OpenClaw (Garmin and friends)"
readme = "README.md"
authors = [{ name = "Ernest Yu" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ernestyu/clawhealth"

[project.scripts]
clawhealth = "clawhealth.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
