[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawhealth"
version = "0.1.0"
description = "Health data bridge for OpenClaw (Garmin and friends)"
readme = "README.md"
authors = [{ name = "Ernest Yu" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
  "garminconnect>=0.2.1,<0.3.0",
  "garth>=0.5.0,<0.6.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ernestyu/clawhealth"

[project.scripts]
clawhealth = "clawhealth.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
